# mcu

01-blink/: main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/stdio-task/: stdio-task.c
02-echo/: main.c
02-printf/: main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c  led-task.h
03-adc/protocol-task/: protocol-task.c  protocol-task.h
03-adc/stdio-task/: stdio-task.c
